--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,8 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>广州辂轺信息科技有限公司</title>
+    <script src="https://cdn.bootcss.com/echarts/3.7.1/echarts.min.js"></script>
+    <script src="%PUBLIC_URL%/china.js"></script>
     <!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.2.0/codemirror.min.css" />-->
     <!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.2.0/theme/monokai.min.css" />-->
     <!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/8.5/styles/github.min.css" />-->
