--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,7 @@
     -->
     <title>广州辂轺信息科技有限公司</title>
     <script src="https://cdn.bootcss.com/echarts/3.7.1/echarts.min.js"></script>
+    <link href="https://cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <script src="%PUBLIC_URL%/china.js"></script>
     <!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.2.0/codemirror.min.css" />-->
     <!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.2.0/theme/monokai.min.css" />-->
